--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "netlify dev",
-    "dev:client": "vite",
-    "dev:server": "node server/server.js",
+    "dev": "vite",
+    "server": "node server/server.js",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
@@ -14,7 +13,6 @@
   },
   "dependencies": {
     "@heroicons/react": "2.2.0",
-    "@vitejs/plugin-react": "5.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "react": "^19.1.1",
@@ -22,9 +20,7 @@
     "recharts": "^3.2.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
-    "typescript": "5.8.3",
-    "uuid": "9.0.1",
-    "vite": "7.1.2"
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "9.33.0",
@@ -33,12 +29,13 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/uuid": "9.0.8",
+    "@vitejs/plugin-react": "5.0.0",
     "eslint": "9.33.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
     "globals": "16.3.0",
-    "netlify-cli": "^17.31.1",
-    "serverless-http": "^3.2.0",
-    "typescript-eslint": "8.39.1"
+    "typescript": "5.8.3",
+    "typescript-eslint": "8.39.1",
+    "vite": "^5.3.3"
   }
 }
